--- a/.github/workflows/main_tp-poc-transcription-back-db.yml
+++ b/.github/workflows/main_tp-poc-transcription-back-db.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - TP-POC-Transcription-back-DB
+name: Build and deploy Node.js app to Azure Web App - TP-POC-ACS-FRONT
 
 on:
   push:
@@ -28,7 +25,7 @@ jobs:
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip . -x "*.git*"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -49,14 +46,22 @@ jobs:
         with:
           name: node-app
 
+      - name: Clean wwwroot before deployment
+        run: |
+          rm -rf /home/site/wwwroot/*
+
+      - name: Wait before deployment
+        run: sleep 30
+
       - name: Unzip artifact for deployment
         run: unzip release.zip
-      
+
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'TP-POC-Transcription-back-DB'
+          app-name: 'TP-POC-ACS-FRONT'
           slot-name: 'Production'
-          package: .
+          package: release.zip
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5E0BF48E3E9445C3886B6CEAB3C3506F }}
+          clean: true
